--- a/data_structures/1_1/README
+++ b/data_structures/1_1/README
@@ -1,2 +1,7 @@
 1. Problem description
 设有一组N个数，确定其中第k个最大者，这称为选择问题(selection problem)
+
+2. 算法1：将这n个数做降序排列，第k个元素就是
+3. 算法2: 将前k个数做降序排列，用剩下的数分别和排列结果中的最后一个数比较，
+   如果小于则丢弃，如果大于则替换它，然后再进行降序排列，如此反复，最后结
+   果就是降序排列的最后一个元素
